refactor: Update door accessory initialization and naming conventions
🚪 Major improvements to door accessory handling:

- Renamed FURNITURE_DOOR to DOOR_ACCESSORY for better clarity
- Updated DataInitializer to properly set seller for door accessories
- Fixed user association in furniture door creation
- Improved sample data generation with randomized stock quantities
- Enhanced naming conventions for better code readability

Technical Changes:
- Modified ItemType enum to use DOOR_ACCESSORY
- Updated CheckoutService to handle new type
- Enhanced BasketService for door accessory handling
- Improved error messages and documentation
- Added proper seller association in DataInitializer

🔧 This commit ensures proper data initialization and maintains
consistent naming across the codebase.